# copilot_med

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  presentation.md  requirements.txt
Docs/: README.md  api-specifications.md  configuration.md  integration-deployment.md  performance-metrics.md  privacy-security-quality-report.md  repository-structure.md  runtime-flows.md  setup-installation.md
app/: __init__.py  main.py  schemas.py
backend-session-manager/: .dockerignore  .env.example  Dockerfile  README.md  requirements.txt
clinical-recommendations-service/: Dockerfile  README.md  requirements.txt
clinical_recommendations/: clinical_recommendations.csv  recommendation_embeddings.parquet
fhir/: Dockerfile  README.md  application.yaml  cleanup_generated_resources.py  fetch_fhir_data.py  generate_synthetic_fhir.py  retrieve_and_import.sh
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
knowledge-extractor/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
post-session-analytics/: Dockerfile
real_time_analysis/: Dockerfile  MedCoPilot.docx  README.md  (+1 more)
transcribation/: .dockerignore  Dockerfile  Dockerfile.cpu  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
transcribation/app/: audio.py  config.py  errors.py  main.py  model.py  routes.py  session_audio_context.py  transcript_alignment.py
transcribation/scripts/: ensure_model.py  start.sh
transcribation/tests/: test_api.py
(+175 files in other folders)
