[project]
name = "transcribation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "faster-whisper>=1.2.1",
    "kaggle>=1.7.4.5",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.39.0",
]
